<?xml version="1.0" encoding="utf-8"?><!--
  Copyright (C) 2011 The Android Open Source Project

  Licensed under the Apache License, Version 2.0 (the "License");
  you may not use this file except in compliance with the License.
  You may obtain a copy of the License at

       http://www.apache.org/licenses/LICENSE-2.0

  Unless required by applicable law or agreed to in writing, software
  distributed under the License is distributed on an "AS IS" BASIS,
  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  See the License for the specific language governing permissions and
  limitations under the License.
-->

<resources>

  <string name="app_title">Simple Protocol Player</string>
  <string name="labelIpAddr">IP Address / Hostname</string>
  <string name="hintIpAddr">IP Address / Hostname</string>
  <string name="labelAudioPort">Audio Port</string>
  <string name="hintAudioPort">Audio Port</string>
  <string name="defaultAudioPort">12345</string>
  <string name="notice_item">Notice</string>
  <string name="notice_title">Notice</string>
  <string name="labelSampleRate">Sample Rate</string>
  <string name="labelBitDepth">Bit Depth</string>
  <string name="labelStereoMono">Mono/Stereo</string>
  <string-array name="sampleRates">
    <item>11025</item>
    <item>12000</item>
    <item>22050</item>
    <item>24000</item>
    <item>44100</item>
    <item>48000 (Default)</item>
    <item>96000</item>
    <item>192000</item>
    <item>384000</item>
  </string-array>
  <string-array name="bitDepths">
    <item>8</item>
    <item>16 (Default)</item>
    <item>24</item>
    <item>32 (float)</item>
  </string-array>
  <string-array name="stereo">
    <item>Mono</item>
    <item>Stereo (Default)</item>
  </string-array>
  <!-- used for searching stereo spinner -->
  <string name="stereoKey">Stereo</string>
  <string name="bufferSize">Buffer size (in ms)</string>
  <string name="bufferSizeHint">Buffer size</string>
  <string name="useRndis">Use USB Tethering (rndis)</string>
  <string name="retry">Enable network retries</string>
  <string name="usePerformanceMode">Performance mode</string>
  <string name="useMinBuffer">Min AudioTrack buffer</string>
  <string name="autoConnectOnStart">Auto connect on app start</string>
  <string name="error">Error</string>
</resources>
